--- a/client/FortuneSchools01.html
+++ b/client/FortuneSchools01.html
@@ -93,7 +93,7 @@
           var title = $('.oneheader').val();
 
 					//提交新闻
-					$.post( "http://localhost:3000/api/FortuneSchools", {
+					$.post( "http://101.200.197.79:3000/api/FortuneSchools", {
 										  "title": title,
 										  "content": content
 										} )
