--- a/client/Policies01.html
+++ b/client/Policies01.html
@@ -92,7 +92,7 @@
           var content = $('.summernote').html();
 					var title = $('.oneheader').val();
 					//提交报道
-					$.post( "http://localhost:3000/api/Policies", {
+					$.post( "http://101.200.197.79:3000/api/Policies", {
 										  "title": title,
 										  "content": content,
 										  "createDate": "2016-05-04"
