--- a/client/news01.html
+++ b/client/news01.html
@@ -100,7 +100,7 @@
           var type = $('.selecttype').val();
           var title = $('.oneheader').val();
 					//提交新闻
-					$.post( "http://localhost:3000/api/Journalisms", {
+					$.post( "http://101.200.197.79:3000/api/Journalisms", {
 										  "title": title,
 										  "content": content,
 										  "createDate": new Date().Format("yyyy-MM-dd hh:mm"),
