--- a/client/homebanner.html
+++ b/client/homebanner.html
@@ -133,18 +133,18 @@
     var makrup = $('.summernote').summernote('code');
         $('.summernote').summernote('destroy');
     var bb = $('.summernote').html();
-		// $.get("http://localhost:3000/api/Journalisms",function(a,b,c,d,e){
+		// $.get("http://101.200.197.79:3000/api/Journalisms",function(a,b,c,d,e){
 		// 	console.log(a,b,c,d,e);
 		// })
 		//获取列表 查询条件filter
-		// $.get( "http://localhost:3000/api/Journalisms" )
+		// $.get( "http://101.200.197.79:3000/api/Journalisms" )
 		//   .done(function( data,statusText,response) {
 		//     console.log( "Data Loaded: " , data);
 		//   }).fail(function(err,statusText){
 		// 		console.log( "err: " , err );
 		// 	});
 		//提交新闻
-		$.post( "http://localhost:3000/api/Journalisms", {
+		$.post( "http://101.200.197.79:3000/api/Journalisms", {
 							  "title": $('.oneheader').val(),
 							  "content": bb,
 							  "createDate": "2016-05-04",
