--- a/client/news02.html
+++ b/client/news02.html
@@ -101,7 +101,7 @@
 
 		$('.footable').footable();
     var bj;
-    $.get( "http://localhost:3000/api/Journalisms")
+    $.get( "http://101.200.197.79:3000/api/Journalisms")
       .done(function( data,statusText,response) {
         console.log( "Data Loaded: " , data[0].id);
         for(var i=0;i<data.length;i++){
@@ -116,7 +116,7 @@
       });
       var deletes = function(id){
          $.ajax({
-           url: 'http://localhost:3000/api/Journalisms/'+id,
+           url: 'http://101.200.197.79:3000/api/Journalisms/'+id,
            type: 'DELETE',
            success: function(response) {
               alert("删除成功");
