--- a/client/news01.html
+++ b/client/news01.html
@@ -15,7 +15,7 @@
 </head>
 <body >
 	<div class="header">
-		<span class="logo">logo</span>
+		<span class="logo"><img style="width: 140px; margin-top: -10px;" src="img/logo.png" height="100%" alt=""></span>
 		<ul class="nav">
 			<li><a class="logout" href="login.html" onclick="delCookie()">安全退出</a></li>
 		</ul>
@@ -62,8 +62,8 @@
       <div><label for="">标题：</label><input class="oneheader" type="text" placeholder="请输入标题"></div>
 			<div>
         <label for="">类型：</label>
-        <select class="selecttype" name="" id="">
-          <option value=""></option>
+        <select style="width:150px;height:30px;" class="selecttype" name="" id="">
+          <option value="">请选择类型</option>
           <option value="公司新闻">公司新闻</option>
           <option value="行业新闻">行业新闻</option>
         </select>
