--- a/client/user01.html
+++ b/client/user01.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div class="header">
-		<span class="logo">logo</span>
+		<span class="logo"><img style="width: 140px; margin-top: -10px;" src="img/logo.png" height="100%" alt=""></span>
 		<ul class="nav">
 			<li><a class="logout" href="login.html" onclick="delCookie()">安全退出</a></li>
 		</ul>
@@ -38,7 +38,7 @@
               </ul>
           </li>
           <li class="active">
-              <a href="user01.html"><i class="fa fa-user"></i> <span class="nav-label">修改密码</span> <span class="fa arrow"></span></a>
+              <a href="user01.html"><i class="fa fa-user"></i> <span class="nav-label">修改密码</span></a>
           </li>
           <li>
               <a><i class="fa fa-user"></i> <span class="nav-label">财富学堂</span> <span class="fa arrow"></span></a>
