--- a/client/news02.html
+++ b/client/news02.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="header">
-		<span class="logo">logo</span>
+		<span class="logo"><img style="width: 140px; margin-top: -10px;" src="img/logo.png" height="100%" alt=""></span>
 		<ul class="nav">
 			<li><a class="logout" href="login.html" onclick="delCookie()">安全退出</a></li>
 		</ul>
@@ -63,7 +63,7 @@
 
                     <div class="ibox-content">
 
-                        <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="8" data-filter=#filter>
+                        <table class="footable table table-stripped toggle-arrow-tiny" data-filter=#filter>
                             <thead>
                             <tr>
                                 <th>ID</th>
@@ -77,11 +77,7 @@
 
                             </tbody>
                             <tfoot>
-                            <tr>
-                                <td colspan="15">
-                                    <ul class="pagination pull-right"></ul>
-                                </td>
-                            </tr>
+                            
                             </tfoot>
                         </table>
 
@@ -105,7 +101,7 @@
       .done(function( data,statusText,response) {
         console.log( "Data Loaded: " , data[0].id);
         for(var i=0;i<data.length;i++){
-          $('.tbbox').append("<tr><td>"+data[i].id+"</td><td>"+data[i].title+"</td><td>"+data[i].type+"</td><td>"+data[i].createDate+"</td><td><a onclick='deletes("+data[i].id+")'>删除</a>|<a onclick='bj("+data[i].id+")'>编辑</a></td></tr>");
+          $('.tbbox').append("<tr><td>"+data[i].id+"</td><td>"+data[i].title+"</td><td>"+data[i].type+"</td><td>"+new Date(data[i].createDate).Format("yyyy-MM-dd hh:mm")+"</td><td><a onclick='deletes("+data[i].id+")'>删除</a>|<a onclick='bj("+data[i].id+")'>编辑</a></td></tr>");
         }
 
         bj = function(id){
